# something-useful

./: .gitignore  README.md  pyproject.toml  start-obs-autoclip.bat
docs/: obs-autoclip.md
src/obs_autoclip/: __init__.py  cli.py  clip_files.py  config.py  manager.py  obs_client.py
tests/: test_cli.py  test_clip_files.py  test_config.py  test_manager.py  test_obs_client.py
