[project]
name = "something-useful"
version = "0.1.0"
description = "Utilities for OBS auto-clipping with Replay Buffer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "obsws-python>=1.7.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
obs-autoclip = "obs_autoclip.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
